--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -5,20 +5,18 @@
     "experimentalDecorators": true,
     "module": "commonjs",
     "noImplicitAny": true,
-    "outDir": "lib",
+    "outDir": "dist",
     "removeComments": true,
     "rootDir": "src",
     "sourceMap": true,
-    "strict": true,
     "strictNullChecks": true,
-    "target": "ES2015",
+    "target": "ES2017"
   },
   "include": [
-    "src/**/*",
+    "src/**/*"
   ],
   "exclude": [
-    "examples/**/*",
-    "lib/**/*",
     "node_modules/**/*",
+    "dist/**/*"
   ]
 }
